@@ -1,0 +1,3 @@
+"file","duration","duration_noSilence","voiced","ampl_mean","ampl_sd","amplVoiced_mean","amplVoiced_sd","dom_mean","dom_sd","entropy_mean","entropy_sd","harmEnergy_mean","harmEnergy_sd","harmHeight_mean","harmHeight_sd","HNR_mean","HNR_sd","loudness_mean","loudness_sd","peakFreq_mean","peakFreq_sd","pitch_mean","pitch_sd","quartile25_mean","quartile25_sd","quartile50_mean","quartile50_sd","quartile75_mean","quartile75_sd","specCentroid_mean","specCentroid_sd","specSlope_mean","specSlope_sd","time","pitch"
+"16002_Faking_It_Large_clear.wav",2.04335600907029,0.925,0,0.0764741529835526,0.0987730940408586,NA,NA,NA,NA,0.280691823238648,0.115479894565232,NA,NA,NA,NA,NA,NA,NA,NA,438.735596436232,250.561849775877,NA,NA,NA,NA,NA,NA,NA,NA,1566.05498951266,276.359590789483,-0.000333501402891653,0.000192482050027689,"25, 50, 75, 100, 125, 150, 175, 200, 225, 250, 275, 300, 325, 350, 375, 400, 425, 450, 475, 500, 525, 550, 575, 600, 625, 650, 675, 700, 725, 750, 775, 800, 825, 850, 875, 900, 925, 950, 975, 1000, 1025, 1050, 1075, 1100, 1124, 1149, 1174, 1199, 1224, 1249, 1274, 1299, 1324, 1349, 1374, 1399, 1424, 1449, 1474, 1499, 1524, 1549, 1574, 1599, 1624, 1649, 1674, 1699, 1724, 1749, 1774, 1799, 1824, 1849, 1874, 1899, 1924, 1949, 1974, 1999","NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA"
+"temp1.wav",20.0400907029478,19.425,0,0.062808703143795,0.051687541819477,NA,NA,NA,NA,0.0818035936218723,0.061901942577567,NA,NA,NA,NA,NA,NA,NA,NA,866.98965116218,794.096461586855,NA,NA,NA,NA,NA,NA,NA,NA,1755.59806447153,539.943922275608,-0.000315830637894154,0.000136329063338683,"25, 50, 75, 100, 125, 150, 175, 200, 225, 250, 275, 300, 325, 350, 375, 400, 425, 450, 475, 500, 525, 550, 575, 600, 625, 650, 675, 700, 725, 750, 775, 800, 825, 850, 875, 900, 925, 950, 975, 1000, 1025, 1050, 1075, 1100, 1124, 1149, 1174, 1199, 1224, 1249, 1274, 1299, 1324, 1349, 1374, 1399, 1424, 1449, 1474, 1499, 1524, 1549, 1574, 1599, 1624, 1649, 1674, 1699, 1724, 1749, 1774, 1799, 1824, 1849, 1874, 1899, 1924, 1949, 1974, 1999, 2024, 2049, 2074, 2099, 2124, 2149, 2174, 2199, 2224, 2249, 2274, 2299, 2324, 2349, 2374, 2399, 2424, 2449, 2474, 2499, 2524, 2549, 2574, 2599, 2624, 2649, 2674, 2699, 2724, 2749, 2774, 2799, 2824, 2849, 2874, 2899, 2924, 2949, 2974, 2999, 3024, 3049, 3074, 3099, 3124, 3149, 3174, 3199, 3224, 3249, 3274, 3299, 3323, 3348, 3373, 3398, 3423, 3448, 3473, 3498, 3523, 3548, 3573, 3598, 3623, 3648, 3673, 3698, 3723, 3748, 3773, 3798, 3823, 3848, 3873, 3898, 3923, 3948, 3973, 3998, 4023, 4048, 4073, 4098, 4123, 4148, 4173, 4198, 4223, 4248, 4273, 4298, 4323, 4348, 4373, 4398, 4423, 4448, 4473, 4498, 4523, 4548, 4573, 4598, 4623, 4648, 4673, 4698, 4723, 4748, 4773, 4798, 4823, 4848, 4873, 4898, 4923, 4948, 4973, 4998, 5023, 5048, 5073, 5098, 5123, 5148, 5173, 5198, 5223, 5248, 5273, 5298, 5323, 5348, 5373, 5398, 5423, 5448, 5473, 5498, 5522, 5547, 5572, 5597, 5622, 5647, 5672, 5697, 5722, 5747, 5772, 5797, 5822, 5847, 5872, 5897, 5922, 5947, 5972, 5997, 6022, 6047, 6072, 6097, 6122, 6147, 6172, 6197, 6222, 6247, 6272, 6297, 6322, 6347, 6372, 6397, 6422, 6447, 6472, 6497, 6522, 6547, 6572, 6597, 6622, 6647, 6672, 6697, 6722, 6747, 6772, 6797, 6822, 6847, 6872, 6897, 6922, 6947, 6972, 6997, 7022, 7047, 7072, 7097, 7122, 7147, 7172, 7197, 7222, 7247, 7272, 7297, 7322, 7347, 7372, 7397, 7422, 7447, 7472, 7497, 7522, 7547, 7572, 7597, 7622, 7647, 7672, 7697, 7721, 7746, 7771, 7796, 7821, 7846, 7871, 7896, 7921, 7946, 7971, 7996, 8021, 8046, 8071, 8096, 8121, 8146, 8171, 8196, 8221, 8246, 8271, 8296, 8321, 8346, 8371, 8396, 8421, 8446, 8471, 8496, 8521, 8546, 8571, 8596, 8621, 8646, 8671, 8696, 8721, 8746, 8771, 8796, 8821, 8846, 8871, 8896, 8921, 8946, 8971, 8996, 9021, 9046, 9071, 9096, 9121, 9146, 9171, 9196, 9221, 9246, 9271, 9296, 9321, 9346, 9371, 9396, 9421, 9446, 9471, 9496, 9521, 9546, 9571, 9596, 9621, 9646, 9671, 9696, 9721, 9746, 9771, 9796, 9821, 9846, 9871, 9896, 9920, 9945, 9970, 9995, 10020, 10045, 10070, 10095, 10120, 10145, 10170, 10195, 10220, 10245, 10270, 10295, 10320, 10345, 10370, 10395, 10420, 10445, 10470, 10495, 10520, 10545, 10570, 10595, 10620, 10645, 10670, 10695, 10720, 10745, 10770, 10795, 10820, 10845, 10870, 10895, 10920, 10945, 10970, 10995, 11020, 11045, 11070, 11095, 11120, 11145, 11170, 11195, 11220, 11245, 11270, 11295, 11320, 11345, 11370, 11395, 11420, 11445, 11470, 11495, 11520, 11545, 11570, 11595, 11620, 11645, 11670, 11695, 11720, 11745, 11770, 11795, 11820, 11845, 11870, 11895, 11920, 11945, 11970, 11995, 12020, 12045, 12070, 12095, 12120, 12144, 12169, 12194, 12219, 12244, 12269, 12294, 12319, 12344, 12369, 12394, 12419, 12444, 12469, 12494, 12519, 12544, 12569, 12594, 12619, 12644, 12669, 12694, 12719, 12744, 12769, 12794, 12819, 12844, 12869, 12894, 12919, 12944, 12969, 12994, 13019, 13044, 13069, 13094, 13119, 13144, 13169, 13194, 13219, 13244, 13269, 13294, 13319, 13344, 13369, 13394, 13419, 13444, 13469, 13494, 13519, 13544, 13569, 13594, 13619, 13644, 13669, 13694, 13719, 13744, 13769, 13794, 13819, 13844, 13869, 13894, 13919, 13944, 13969, 13994, 14019, 14044, 14069, 14094, 14119, 14144, 14169, 14194, 14219, 14244, 14269, 14294, 14319, 14343, 14368, 14393, 14418, 14443, 14468, 14493, 14518, 14543, 14568, 14593, 14618, 14643, 14668, 14693, 14718, 14743, 14768, 14793, 14818, 14843, 14868, 14893, 14918, 14943, 14968, 14993, 15018, 15043, 15068, 15093, 15118, 15143, 15168, 15193, 15218, 15243, 15268, 15293, 15318, 15343, 15368, 15393, 15418, 15443, 15468, 15493, 15518, 15543, 15568, 15593, 15618, 15643, 15668, 15693, 15718, 15743, 15768, 15793, 15818, 15843, 15868, 15893, 15918, 15943, 15968, 15993, 16018, 16043, 16068, 16093, 16118, 16143, 16168, 16193, 16218, 16243, 16268, 16293, 16318, 16343, 16368, 16393, 16418, 16443, 16468, 16493, 16518, 16542, 16567, 16592, 16617, 16642, 16667, 16692, 16717, 16742, 16767, 16792, 16817, 16842, 16867, 16892, 16917, 16942, 16967, 16992, 17017, 17042, 17067, 17092, 17117, 17142, 17167, 17192, 17217, 17242, 17267, 17292, 17317, 17342, 17367, 17392, 17417, 17442, 17467, 17492, 17517, 17542, 17567, 17592, 17617, 17642, 17667, 17692, 17717, 17742, 17767, 17792, 17817, 17842, 17867, 17892, 17917, 17942, 17967, 17992, 18017, 18042, 18067, 18092, 18117, 18142, 18167, 18192, 18217, 18242, 18267, 18292, 18317, 18342, 18367, 18392, 18417, 18442, 18467, 18492, 18517, 18542, 18567, 18592, 18617, 18642, 18667, 18692, 18717, 18741, 18766, 18791, 18816, 18841, 18866, 18891, 18916, 18941, 18966, 18991, 19016, 19041, 19066, 19091, 19116, 19141, 19166, 19191, 19216, 19241, 19266, 19291, 19316, 19341, 19366, 19391, 19416, 19441, 19466, 19491, 19516, 19541, 19566, 19591, 19616, 19641, 19666, 19691, 19716, 19741, 19766, 19791, 19816, 19841, 19866, 19891, 19916, 19941, 19966, 19991","NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA, NA"
