@@ -8,6 +8,7 @@ MINOR:
   * estimateVTL(): the plot shows Cook's distance as a measure of the influence of each formant frequency on apparent VTL
   * osc() replaces osc_db()
   * osc(), spectrogram(): fast plotting of long audio files, updated tick labels
+  * pitch_app(): caching to speed up the plotting of long files
 
 
           CHANGES IN SOUNDGEN VERSION 1.7.0 [24-May-2020]
